# simpleJwtAuth

./: .gitignore  Cargo.toml  LICENCE  shell.nix
src/: JWT_key.secret  api.rs  catchers.rs  constants.rs  main.rs  my_regex.rs  structs.rs
src/structs/: impls.rs
static/: admin.html  authorized.html  index.html  login.html  main.css  unauthorized.html  unprocessable.html  validation.html
