[package]
name = "bsbd"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
cookie = "0.18.1"
figment = "0.10.19"
jsonwebtoken = "9.3.0"
log = "0.4.25"
minijinja = "2.6.0"
regex = "1.11.1"
rocket = { version = "0.5.1", features = ["secrets"] }
serde = {version = "1.0.217", features = ["derive"]}
# simplelog = { version = "0.12.2", default-features = false, features = ["local-offset"]}
